consent - z-index fix

--- a/sdnnt/src/main/ui/src/sass/_app-consent.scss
+++ b/sdnnt/src/main/ui/src/sass/_app-consent.scss
@@ -8,6 +8,7 @@ app-consent {
   bottom: 0;
   left: 0;
   box-shadow: 0px -5px 30px -5px rgba(0,0,0,0.2);
+  z-index: 1062;
 
   .app-wrapper {
     @extend .app-p-8;
